# certbot-dns-vipdns

./: .coveragerc  .gitignore  .pylintrc  LICENSE.txt  README.md  pyproject.toml  tox.ini
.github/workflows/: lint.yml  publish.yml  tests.yml
certbot_dns_vipdns/: __init__.py  dns_vipdns.py  dns_vipdns_test.py  fakes.py
